Prevent images from breaking out of container.

--- a/admin-app/less/site.less
+++ b/admin-app/less/site.less
@@ -2,6 +2,11 @@ body {
   /*padding-top: @navbar-height;*/
 }
 
+img {
+    height: auto;
+    max-width: 100%; /* Prevent images from breaking out of their container */
+}
+
 .main {
     padding-top: 20px;
 }
